--- a/bitdash/index.html
+++ b/bitdash/index.html
@@ -60,7 +60,7 @@
 <body>
   <div class="topbar">
     <div>
-      <h1>Bitdash - Buy it Dashboard <span class="muted" style="font-size:.8rem">build 2026-02-17-stable12</span></h1>
+      <h1>Bitdash - Buy it Dashboard <span class="muted" style="font-size:.8rem">build 2026-02-17-stable13</span></h1>
       <div class="muted">Visualize, entenda, decida!</div>
     </div>
     <div class="actions">
@@ -231,6 +231,10 @@ async function loadPortfolio(){
   let base = null;
   let loadedFromRemote = false;
 
+  // mantém estado local de login para não parecer deslogado em falhas momentâneas de sessão
+  const localEmail0 = getLocalPremiumEmail();
+  if (localEmail0 && !currentUser?.email) currentUser = { email: localEmail0, localPremium: true };
+
   try {
     const me = await api('/auth/me');
     currentUser = me.user;
@@ -261,11 +265,16 @@ async function loadPortfolio(){
   if (base == null) base = DEFAULT_PORT.slice();
 
   // Adiciona ativos recém-inseridos SEM perder carteira existente
-  const inbound = JSON.parse(sessionStorage.getItem('inboundPortfolio')||'null');
-  if (inbound?.length) {
+  let inbound = null;
+  try { inbound = JSON.parse(sessionStorage.getItem('inboundPortfolio')||'null'); } catch {}
+  if (!Array.isArray(inbound) || !inbound.length) {
+    try { inbound = JSON.parse(localStorage.getItem('bitdash_inbound_portfolio')||'null'); } catch {}
+  }
+  if (Array.isArray(inbound) && inbound.length) {
     const merged = mergePortfolio(base, inbound);
     sessionStorage.setItem('freePortfolio', JSON.stringify(merged));
     sessionStorage.removeItem('inboundPortfolio');
+    try { localStorage.removeItem('bitdash_inbound_portfolio'); } catch {}
     return merged;
   }
 
