--- a/bitdash/commercial-dashboard.html
+++ b/bitdash/commercial-dashboard.html
@@ -60,7 +60,7 @@
 <body>
   <div class="topbar">
     <div>
-      <h1>Bitdash - Buy it Dashboard <span class="muted" style="font-size:.8rem">build 2026-02-17-stable15</span></h1>
+      <h1>Bitdash - Buy it Dashboard <span class="muted" style="font-size:.8rem">build 2026-02-17-stable16</span></h1>
       <div class="muted">Visualize, entenda, decida!</div>
     </div>
     <div class="actions">
@@ -234,7 +234,7 @@ async function loadPortfolio(){
   // rascunho explícito vindo da tela de adicionar ativos (prioridade máxima)
   try {
     const draft = JSON.parse(localStorage.getItem('bitdash_portfolio_draft') || 'null');
-    if (Array.isArray(draft) && draft.length) {
+    if (Array.isArray(draft)) {
       try { localStorage.removeItem('bitdash_portfolio_draft'); } catch {}
       return draft;
     }
