--- a/bitdash/commercial-payment-approved.html
+++ b/bitdash/commercial-payment-approved.html
@@ -32,9 +32,13 @@ const API = (window.BITDASH_API_URL || localStorage.getItem('bitdash_api_url') |
 const statusEl = document.getElementById('status');
 
 async function api(path, method='GET', body){
+  const token = localStorage.getItem('bitdash_auth_token') || '';
+  const headers = {'Content-Type':'application/json'};
+  if (token) headers['Authorization'] = `Bearer ${token}`;
+
   const r = await fetch(API+path, {
     method,
-    headers: {'Content-Type':'application/json'},
+    headers,
     credentials: 'include',
     body: body ? JSON.stringify(body) : undefined,
   });
